--- a/Leinenger_2018.Rmd
+++ b/Leinenger_2018.Rmd
@@ -3,8 +3,7 @@ title: "Leinenger_2018_JEP:LMC"
 author: "Mallorie Leinenger"
 date: "June 28, 2018"
 output: 
-  html_document: 
-    keep_md: yes
+  github_document 
 ---
 
 ```{r setup, include=FALSE}
