--- a/Leinenger_2018.Rmd
+++ b/Leinenger_2018.Rmd
@@ -32,6 +32,7 @@ library(psych)
 library(plotrix)
 library(reshape2)
 library(RTsurvival)
+library(survival)
 ```
 
 ## Experiment 1
@@ -75,15 +76,199 @@ p.meanse.SCA<-ggplot(data = subset(dat.SCA, variable %in% c("ffd","sfd","gzd")),
 p.meanse.SCA + scale_colour_manual(values=c("aquamarine4","aquamarine3","coral3")) + scale_shape_manual(values=c(1,0,2)) 
 ```
 
+### Survival Analyses for Exp. 1
+Although this graded processing suggests that readers activate phonological codes which help them more easily process words which are phonologically related to the expected/contextually appropriate target, just how rapidly these codes come online and begin to influence behavior is not clear. In order to better characterized the time course of code generation, survival analyses were conducted to determine the earliest observable influence of phonology on behavior.
+
+In these analyses, the rate of "surviving" fixations is compared across two condition (here the phonologically related and orthographic control condition) to determine the point at which the survival curves diverge (e.g., the point in time at which more readers have left the phonologically related word than the orthographic control word) which is indicative of easier processing in one condition relative to the other. The divergence point then reflects the earliest observable influence of phonological coding on behavior.
+
+For the paper, I used Matlab to calculate divergence point estimates, however here I am using the new [RTsurvival package](https://github.com/matsukik/RTsurvival)
+
+```{r survdata setup exp1, echo = TRUE, message=FALSE, warning=FALSE}
+tmp<-select(data,subject,ffd,condition) %>% arrange(condition) %>%
+  rename(duration=ffd)
+tmp$condition <- as.numeric(tmp$condition)
+survdata<- as.data.frame(tmp %>% as_tibble() %>% mutate(condition = condition-1)) %>%
+  filter(condition != 0, !is.na(duration))
+survdata$condition <- as.factor(survdata$condition)
+str(survdata)
+```
+We have 48 participants who each have between 35 and 100 data points:
+
+```{r survdata summary Exp 1, echo = TRUE, message=FALSE, warning=FALSE} 
+n.per.sbj <- table(survdata$subject)
+length(n.per.sbj)
+range(n.per.sbj)
+```
+We can now use these data to generate divergence point estimates (DPE) for each participant:
+
+```{r ip.DPA Exp 1, echo = TRUE, message=FALSE, warning=FALSE}
+ip.dpa <- DPA.ip(survdata$subject, survdata$duration, survdata$condition, quiet = TRUE)
+dpe <- as.data.frame(ip.dpa$dp_matrix)
+# critical columns in output
+# 'dpcount' = the number of iterations (out of 1000) on which a DPE was obtained
+#' median_dp_duration' = median of the DPEs obtained on each iteration
+str(dpe)
+dpe$subject[dpe$dpcount<500]
+```
+Doing so reveals that the DPE for 7 participants were unreliable (i.e., a DP was found on fewer than half of the iterations). Removing those participants reveals a mean DPE of ~173 across the remaining participants (the value moves around ever so slightly each time the bootstrap re-sampling procedure runs). This tells us that on average, phonological coding was influencing behavior by as early as 173 ms after fixation on the target word began.
+
+```{r DPE estimate Exp 1, echo = TRUE, message=FALSE, warning=FALSE}
+dpe.rel <- filter(dpe, dpcount >= 500)
+summarize(dpe.rel, mean.dpe = mean(median_duration, na.rm=TRUE))
+```
+Finally, we can represent this visually by examining the survival curves created using the ggsurv function. **Note**--the values displayed on this figure are from the published version of the manuscript and might vary by ~ 1ms from those generated here.
+
+```{r ggsurv function, echo = FALSE, message=FALSE, warning=FALSE}
+ggsurv <- function(s, CI = 'def', plot.cens = T, surv.col = c("coral3","aquamarine3"),
+                   cens.col = 'red', lty.est = c(2,1), lty.ci = 2,
+                   cens.shape = 3, back.white = F, xlab = 'Time',
+                   ylab = 'Survival', main = ''){
+  
+  library(ggplot2)
+  strata <- ifelse(is.null(s$strata) ==T, 1, length(s$strata))
+  stopifnot(length(surv.col) == 1 | length(surv.col) == strata)
+  stopifnot(length(lty.est) == 1 | length(lty.est) == strata)
+  
+  ggsurv.s <- function(s, CI = 'def', plot.cens = T, surv.col = c("aquamarine4","aquamarine3","coral3"),
+                       cens.col = 'red', lty.est = 1, lty.ci = 2,
+                       cens.shape = 3, back.white = F, xlab = 'Time',
+                       ylab = 'Survival', main = ''){
+    
+    dat <- data.frame(time = c(0, s$time),
+                      surv = c(1, s$surv),
+                      up = c(1, s$upper),
+                      low = c(1, s$lower),
+                      cens = c(0, s$n.censor))
+    dat.cens <- subset(dat, cens != 0)
+    
+    col <- ifelse(surv.col == 'gg.def', 'black', surv.col)
+    
+    pl <- ggplot(dat, aes(x = time, y = surv)) +
+      xlab(xlab) + ylab(ylab) + ggtitle(main) +
+      geom_step(col = col, lty = lty.est)
+    
+    pl <- if(CI == T | CI == 'def') {
+      pl + geom_step(aes(y = up), color = col, lty = lty.ci) +
+        geom_step(aes(y = low), color = col, lty = lty.ci)
+    } else (pl)
+    
+    pl <- if(plot.cens == T & length(dat.cens) > 0){
+      pl + geom_point(data = dat.cens, aes(y = surv), shape = cens.shape,
+                      col = cens.col)
+    } else if (plot.cens == T & length(dat.cens) == 0){
+      stop ('There are no censored observations')
+    } else(pl)
+    
+    pl <- if(back.white == T) {pl + theme_bw()
+    } else (pl)
+    pl
+  }
+  
+  ggsurv.m <- function(s, CI = 'def', plot.cens = T, surv.col = c("aquamarine4","aquamarine3","coral3"),
+                       cens.col = 'red', lty.est = 1, lty.ci = 2,
+                       cens.shape = 3, back.white = F, xlab = 'Time',
+                       ylab = 'Survival', main = '') {
+    n <- s$strata
+    
+    groups <- factor(unlist(strsplit(names
+                                     (s$strata), '='))[seq(2, 2*strata, by = 2)])
+    gr.name <-  unlist(strsplit(names(s$strata), '='))[1]
+    gr.df <- vector('list', strata)
+    ind <- vector('list', strata)
+    n.ind <- c(0,n); n.ind <- cumsum(n.ind)
+    for(i in 1:strata) ind[[i]] <- (n.ind[i]+1):n.ind[i+1]
+    
+    for(i in 1:strata){
+      gr.df[[i]] <- data.frame(
+        time = c(0, s$time[ ind[[i]] ]),
+        surv = c(1, s$surv[ ind[[i]] ]),
+        up = c(1, s$upper[ ind[[i]] ]),
+        low = c(1, s$lower[ ind[[i]] ]),
+        cens = c(0, s$n.censor[ ind[[i]] ]),
+        group = rep(groups[i], n[i] + 1))
+    }
+    
+    dat <- do.call(rbind, gr.df)
+    dat.cens <- subset(dat, cens != 0)
+    
+    pl <- ggplot(dat, aes(x = time, y = surv, group = group)) +
+      xlab(xlab) + ylab(ylab) + ggtitle(main) +
+      geom_step(aes(col = group, lty = group))
+    
+    col <- if(length(surv.col == 1)){
+      scale_colour_manual(name = gr.name, values = rep(surv.col, strata))
+    } else{
+      scale_colour_manual(name = gr.name, values = surv.col)
+    }
+    
+    pl <- if(surv.col[1] != 'gg.def'){
+      pl + col
+    } else {pl + scale_colour_discrete(name = gr.name)}
+    
+    line <- if(length(lty.est) == 1){
+      scale_linetype_manual(name = gr.name, values = rep(lty.est, strata))
+    } else {scale_linetype_manual(name = gr.name, values = lty.est)}
+    
+    pl <- pl + line
+    
+    pl <- if(CI == T) {
+      if(length(surv.col) > 1 && length(lty.est) > 1){
+        stop('Either surv.col or lty.est should be of length 1 in order
+             to plot 95% CI with multiple strata')
+      }else if((length(surv.col) > 1 | surv.col == c("aquamarine4","aquamarine3","coral3"))[1]){
+        pl + geom_step(aes(y = up, color = group), lty = lty.ci) +
+          geom_step(aes(y = low, color = group), lty = lty.ci)
+      } else{pl +  geom_step(aes(y = up, lty = group), col = surv.col) +
+          geom_step(aes(y = low,lty = group), col = surv.col)}
+    } else {pl}
+    
+    
+    pl <- if(plot.cens == T & length(dat.cens) > 0){
+      pl + geom_point(data = dat.cens, aes(y = surv), shape = cens.shape,
+                      col = cens.col)
+    } else if (plot.cens == T & length(dat.cens) == 0){
+      stop ('There are no censored observations')
+    } else(pl)
+    
+    pl <- if(back.white == T) {pl + theme_bw()
+    } else (pl)
+    pl
+  }
+  pl <- if(strata == 1) {ggsurv.s(s, CI , plot.cens, surv.col ,
+                                  cens.col, lty.est, lty.ci,
+                                  cens.shape, back.white, xlab,
+                                  ylab, main)
+  } else {ggsurv.m(s, CI, plot.cens, surv.col ,
+                   cens.col, lty.est, lty.ci,
+                   cens.shape, back.white, xlab,
+                   ylab, main)}
+  pl
+}
+
+```
+```{r survival figure Exp 1, echo = TRUE, message=FALSE, warning=FALSE}
+data$survdat<-as.integer(ifelse(data$Condition=="Target",NA,data$ffd))
+tmp2 <- filter(data, !subject %in% c(19, 20, 21, 25, 27, 30, 38))
+ffd.surv <- survfit(Surv(survdat) ~ Condition, data=tmp2)
+pl2<-ggsurv(s=ffd.surv)
+
+pl2 + geom_vline(xintercept = 172.61, linetype = "dotted") + 
+  annotate("rect", xmin=152.4, xmax=192.9, ymin=0, ymax=1, alpha = .2) + 
+  annotate("text", x = 450, y = 0.75, label = "Divergence Point = 173ms", size = 5) +
+  annotate("text", x = 450, y = 0.7, label = "95% CI: 152 - 193ms", size = 5) + 
+  theme(axis.text.x = element_text(colour="grey4", size=16), axis.text.y = element_text(colour = "grey4", size=16)) + 
+  labs(y = "Survival", x = "Time") + theme_grey(base_size=16)
+```
+
 
 ## Experiment 2
-Data for 48 participants (**subject**) reading 188 sentences (**item**) that either contained the correct target word, a pseudohomophone (i.e., phonologically related non-word), or an orthographic control non-word.
+Data for 48 participants (**subject**) reading 180 sentences (**item**) that either contained the correct target word, a pseudohomophone (i.e., phonologically related non-word), or an orthographic control non-word.
 
 - Because of his insomnia, Caleb couldn’t *sleep/sleap/slerp* even though he was tired.
 
 **ffd** = first fixation duration, **sfd** = single fixation duration, **gzd** = gaze duration, **gpt** = go-past time, **tvt** = total time, **skp** = fixation probability (inverse of skipping), **rgi** = regression-in probability, **rgo** = regression-out probability.
 ```{r read data exp2, echo = FALSE, message=FALSE, warning=FALSE}
-## read Exp 1 data and assign approrpiate data types
+## read Exp 2 data and assign approrpiate data types
 data <- read.csv("~/Documents/TimeCoursePhonCoding/Revision3_Analyses/SCB.csv")
 data$Condition<-ifelse(data$condition==1, "Target", ifelse(data$condition==2, "Pseudohomophone", "Control"))
 data$Condition<-factor(data$Condition)
@@ -114,4 +299,236 @@ p.meanse.SCA<-ggplot(data = subset(dat.SCA, variable %in% c("ffd","sfd","gzd")),
   labs(y = "Reading Time (ms)", x = "", shape="Condition", color="Condition") + theme_grey(base_size=16) + scale_y_continuous(breaks=seq(0,310,10)) + 
   theme(axis.text.x = element_text(colour="grey4", size=0), axis.text.y = element_text(colour = "grey4", size=20))
 p.meanse.SCA + scale_colour_manual(values=c("aquamarine4","aquamarine3","coral3")) + scale_shape_manual(values=c(1,0,2)) 
+```
+
+### Survival Analyses for Exp. 2
+Survival analyses were again conducted to determine just how rapidly phonological codes come online and begin to influence behavior, The DPE reflects the earliest observable influence of phonological coding on behavior.
+
+```{r survdata setup exp 2, echo = TRUE, message=FALSE, warning=FALSE}
+tmp<-select(data,subject,ffd,condition) %>% arrange(condition) %>%
+  rename(duration=ffd)
+tmp$condition <- as.numeric(tmp$condition)
+survdata<- as.data.frame(tmp %>% as_tibble() %>% mutate(condition = condition-1)) %>%
+  filter(condition != 0, !is.na(duration))
+survdata$condition <- as.factor(survdata$condition)
+str(survdata)
+```
+We have 48 participants who each have between 55 and 110 data points:
+
+```{r survdata summary Exp 2, echo = TRUE, message=FALSE, warning=FALSE} 
+n.per.sbj <- table(survdata$subject)
+length(n.per.sbj)
+range(n.per.sbj)
+```
+We can now use these data to generate divergence point estimates (DPE) for each participant:
+
+```{r ip.DPA Exp 2, echo = TRUE, message=FALSE, warning=FALSE}
+ip.dpa <- DPA.ip(survdata$subject, survdata$duration, survdata$condition, quiet = TRUE)
+dpe <- as.data.frame(ip.dpa$dp_matrix)
+# critical columns in output
+# 'dpcount' = the number of iterations (out of 1000) on which a DPE was obtained
+#' median_dp_duration' = median of the DPEs obtained on each iteration
+str(dpe)
+dpe$subject[dpe$dpcount<500]
+```
+Doing so reveals that the DPE for 5 participants were unreliable (i.e., a DP was found on fewer than half of the iterations). Removing those participants reveals a mean DPE of ~161 across the remaining participants (the value moves around ever so slightly each time the bootstrap re-sampling procedure runs). This tells us that on average, phonological coding was influencing behavior by as early as 161 ms after fixation on the target word began.
+
+```{r DPE estimate Exp 2, echo = TRUE, message=FALSE, warning=FALSE}
+dpe.rel <- filter(dpe, dpcount >= 500)
+summarize(dpe.rel, mean.dpe = mean(median_duration, na.rm=TRUE))
+```
+Finally, we can represent this visually by examining the survival curves created using the ggsurv function. **Note**--the values displayed on this figure are from the published version of the manuscript and might vary by ~ 1ms from those generated here.
+
+```{r survival figure Exp 2, echo = TRUE, message=FALSE, warning=FALSE}
+data$survdat<-as.integer(ifelse(data$Condition=="Target",NA,data$ffd))
+tmp2 <- filter(data, !subject %in% c(7, 16, 26, 45, 46))
+ffd.surv <- survfit(Surv(survdat) ~ Condition, data=tmp2)
+pl2<-ggsurv(s=ffd.surv)
+
+pl2 + geom_vline(xintercept = 161.06, linetype = "dotted") + 
+  annotate("rect", xmin=146, xmax=176, ymin=0, ymax=1, alpha = .2) + 
+  annotate("text", x = 450, y = 0.75, label = "Divergence Point = 161ms", size = 5) +
+  annotate("text", x = 450, y = 0.7, label = "95% CI: 146 - 176ms", size = 5) + 
+  theme(axis.text.x = element_text(colour="grey4", size=16), axis.text.y = element_text(colour = "grey4", size=16)) + 
+  labs(y = "Survival", x = "Time") + theme_grey(base_size=16)
+```
+
+## Experiment 3
+Data for 48 participants (**subject**) reading the same 168 sentences (**item**) from Experiment 1. Instead of directly fixating the different target words, all readers fixated the correct target word but received a parafoveal preview that was either identical, the homophone, or the orthographic control word. Previews were presented using the gaze-contingent invisible boundary paradigm (Rayner, 1975).
+
+**ffd** = first fixation duration, **sfd** = single fixation duration, **gzd** = gaze duration, **gpt** = go-past time, **tvt** = total time, **skp** = fixation probability (inverse of skipping), **rgi** = regression-in probability, **rgo** = regression-out probability.
+```{r read data exp3, echo = FALSE, message=FALSE, warning=FALSE}
+## read Exp 3 data and assign approrpiate data types
+data <- read.csv("~/Documents/TimeCoursePhonCoding/Revision3_Analyses/DCA.csv")
+data$Condition<-ifelse(data$condition==1, "Target", ifelse(data$condition==2, "Homophone", "Control"))
+data$Condition<-factor(data$Condition)
+data$subject<-factor(data$subject)
+data$item<-factor(data$item)
+data$condition<-factor(data$condition)
+data<-select(data,1:12,20)
+str(data)
+head(data)
+```
+### Means & Standard Errors for Exp. 3
+
+```{r summary statistics exp3, echo = TRUE, message=FALSE, warning=FALSE}
+byCond <- group_by(data, Condition)
+stats.m <- summarize_if(byCond,is.numeric,funs(mean), na.rm=TRUE)
+stats.se <- summarize_if(byCond,is.numeric,funs(std.error), na.rm=TRUE)
+stats.m
+stats.se
+```
+### Figure of early measures for Exp. 3
+As with Experiment 1, the graded processing is clearly visible, where readers have an advantage to processing a phonologically related word over a control word matched on visual similarity. This demonstrates that the advantage to processing the phonologically related word was not driven by the somewhat strange task of reading contextually inappropriate words, which may have inflated fixation times, especially in the control condition.
+
+```{r descriptives plot exp3, echo = FALSE, message=FALSE, warning=FALSE}
+data$Condition<- factor(data$Condition,levels(data$Condition)[c(3,2,1)])
+dat.SCA<-melt(data=data, id = c("subject","item","Condition"), measure = c("ffd","sfd","gzd"))
+p.meanse.SCA<-ggplot(data = subset(dat.SCA, variable %in% c("ffd","sfd","gzd")), aes(y = value, x= Condition, shape=Condition, color=Condition)) + 
+  stat_summary(fun.data = "mean_se") + stat_summary(fun.y = mean, geom = "point") + facet_grid(.~variable) +
+  labs(y = "Reading Time (ms)", x = "", shape="Condition", color="Condition") + theme_grey(base_size=16) + scale_y_continuous(breaks=seq(0,310,10)) + 
+  theme(axis.text.x = element_text(colour="grey4", size=0), axis.text.y = element_text(colour = "grey4", size=20))
+p.meanse.SCA + scale_colour_manual(values=c("aquamarine4","aquamarine3","coral3")) + scale_shape_manual(values=c(1,0,2)) 
+```
+
+### Survival Analyses for Exp. 3
+Survival analyses were again conducted to determine just how rapidly phonological codes come online and begin to influence behavior, The DPE reflects the earliest observable influence of phonological coding on behavior.
+
+```{r survdata setup exp 3, echo = TRUE, message=FALSE, warning=FALSE}
+tmp<-select(data,subject,ffd,condition) %>% arrange(condition) %>%
+  rename(duration=ffd)
+tmp$condition <- as.numeric(tmp$condition)
+survdata<- as.data.frame(tmp %>% as_tibble() %>% mutate(condition = condition-1)) %>%
+  filter(condition != 0, !is.na(duration))
+survdata$condition <- as.factor(survdata$condition)
+str(survdata)
+```
+We have 48 participants who each have between 33 and 84 data points:
+
+```{r survdata summary Exp 3, echo = TRUE, message=FALSE, warning=FALSE} 
+n.per.sbj <- table(survdata$subject)
+length(n.per.sbj)
+range(n.per.sbj)
+```
+We can now use these data to generate divergence point estimates (DPE) for each participant:
+
+```{r ip.DPA Exp 3, echo = TRUE, message=FALSE, warning=FALSE}
+ip.dpa <- DPA.ip(survdata$subject, survdata$duration, survdata$condition, quiet = TRUE)
+dpe <- as.data.frame(ip.dpa$dp_matrix)
+# critical columns in output
+# 'dpcount' = the number of iterations (out of 1000) on which a DPE was obtained
+#' median_dp_duration' = median of the DPEs obtained on each iteration
+str(dpe)
+dpe$subject[dpe$dpcount<500]
+```
+Doing so reveals that the DPE for 2 participants were unreliable (i.e., a DP was found on fewer than half of the iterations). Removing those participants reveals a mean DPE of ~170 across the remaining participants (the value moves around ever so slightly each time the bootstrap re-sampling procedure runs). This tells us that on average, phonological coding was influencing behavior by as early as 170 ms after fixation on the target word began.
+
+```{r DPE estimate Exp 3, echo = TRUE, message=FALSE, warning=FALSE}
+dpe.rel <- filter(dpe, dpcount >= 500)
+summarize(dpe.rel, mean.dpe = mean(median_duration, na.rm=TRUE))
+```
+Finally, we can represent this visually by examining the survival curves created using the ggsurv function. **Note**--the values displayed on this figure are from the published version of the manuscript and might vary by ~ 1ms from those generated here.
+
+```{r survival figure Exp 3, echo = TRUE, message=FALSE, warning=FALSE}
+data$survdat<-as.integer(ifelse(data$Condition=="Target",NA,data$ffd))
+tmp2 <- filter(data, !subject %in% c(14, 27))
+ffd.surv <- survfit(Surv(survdat) ~ Condition, data=tmp2)
+pl2<-ggsurv(s=ffd.surv)
+
+pl2 + geom_vline(xintercept = 170.32, linetype = "dotted") + 
+  annotate("rect", xmin=155, xmax=186, ymin=0, ymax=1, alpha = .2) + 
+  annotate("text", x = 450, y = 0.75, label = "Divergence Point = 170ms", size = 5) +
+  annotate("text", x = 450, y = 0.7, label = "95% CI: 155 - 186ms", size = 5) + 
+  theme(axis.text.x = element_text(colour="grey4", size=16), axis.text.y = element_text(colour = "grey4", size=16)) + 
+  labs(y = "Survival", x = "Time") + theme_grey(base_size=16)
+```
+
+## Experiment 4
+Data for 48 participants (**subject**) reading the 180 sentences (**item**) from Experiment 2, with the word-type manipulation done using the gaze-contingent boundary paradigm like Experiment 3, such that all readers directly fixated the correct target after having had a preview that was either identical, a pseudohomophone, or an orthographic control non-word.
+
+**ffd** = first fixation duration, **sfd** = single fixation duration, **gzd** = gaze duration, **gpt** = go-past time, **tvt** = total time, **skp** = fixation probability (inverse of skipping), **rgi** = regression-in probability, **rgo** = regression-out probability.
+```{r read data exp4, echo = FALSE, message=FALSE, warning=FALSE}
+## read Exp 4 data and assign approrpiate data types
+data <- read.csv("~/Documents/TimeCoursePhonCoding/Revision3_Analyses/DCB.csv")
+data$Condition<-ifelse(data$condition==1, "Target", ifelse(data$condition==2, "Pseudohomophone", "Control"))
+data$Condition<-factor(data$Condition)
+data$subject<-factor(data$subject)
+data$item<-factor(data$item)
+data$condition<-factor(data$condition)
+data<-select(data,1:12,19)
+str(data)
+head(data)
+```
+### Means & Standard Errors for Exp. 4
+
+```{r summary statistics exp4, echo = TRUE, message=FALSE, warning=FALSE}
+byCond <- group_by(data, Condition)
+stats.m <- summarize_if(byCond,is.numeric,funs(mean), na.rm=TRUE)
+stats.se <- summarize_if(byCond,is.numeric,funs(std.error), na.rm=TRUE)
+stats.m
+stats.se
+```
+### Figure of early measures for Exp. 4
+As with with the previous 4 experiments, we again see the graded processing indicative of an advantage to processing phonologically related previews.
+
+```{r descriptives plot exp4, echo = FALSE, message=FALSE, warning=FALSE}
+data$Condition<- factor(data$Condition,levels(data$Condition)[c(3,2,1)])
+dat.SCA<-melt(data=data, id = c("subject","item","Condition"), measure = c("ffd","sfd","gzd"))
+p.meanse.SCA<-ggplot(data = subset(dat.SCA, variable %in% c("ffd","sfd","gzd")), aes(y = value, x= Condition, shape=Condition, color=Condition)) + 
+  stat_summary(fun.data = "mean_se") + stat_summary(fun.y = mean, geom = "point") + facet_grid(.~variable) +
+  labs(y = "Reading Time (ms)", x = "", shape="Condition", color="Condition") + theme_grey(base_size=16) + scale_y_continuous(breaks=seq(0,310,10)) + 
+  theme(axis.text.x = element_text(colour="grey4", size=0), axis.text.y = element_text(colour = "grey4", size=20))
+p.meanse.SCA + scale_colour_manual(values=c("aquamarine4","aquamarine3","coral3")) + scale_shape_manual(values=c(1,0,2)) 
+```
+
+### Survival Analyses for Exp. 4
+Survival analyses were again conducted to determine just how rapidly phonological codes come online and begin to influence behavior, The DPE reflects the earliest observable influence of phonological coding on behavior.
+
+```{r survdata setup exp 4, echo = TRUE, message=FALSE, warning=FALSE}
+tmp<-select(data,subject,ffd,condition) %>% arrange(condition) %>%
+  rename(duration=ffd)
+tmp$condition <- as.numeric(tmp$condition)
+survdata<- as.data.frame(tmp %>% as_tibble() %>% mutate(condition = condition-1)) %>%
+  filter(condition != 0, !is.na(duration))
+survdata$condition <- as.factor(survdata$condition)
+str(survdata)
+```
+We have 48 participants who each have between 34 and 98 data points:
+
+```{r survdata summary Exp 4, echo = TRUE, message=FALSE, warning=FALSE} 
+n.per.sbj <- table(survdata$subject)
+length(n.per.sbj)
+range(n.per.sbj)
+```
+We can now use these data to generate divergence point estimates (DPE) for each participant:
+
+```{r ip.DPA Exp 4, echo = TRUE, message=FALSE, warning=FALSE}
+ip.dpa <- DPA.ip(survdata$subject, survdata$duration, survdata$condition, quiet = TRUE)
+dpe <- as.data.frame(ip.dpa$dp_matrix)
+# critical columns in output
+# 'dpcount' = the number of iterations (out of 1000) on which a DPE was obtained
+#' median_dp_duration' = median of the DPEs obtained on each iteration
+str(dpe)
+dpe$subject[dpe$dpcount<500]
+```
+Doing so reveals that the DPE for 8 participants were unreliable (i.e., a DP was found on fewer than half of the iterations). Removing those participants reveals a mean DPE of ~160 across the remaining participants (the value moves around ever so slightly each time the bootstrap re-sampling procedure runs). This tells us that on average, phonological coding was influencing behavior by as early as 160 ms after fixation on the target word began.
+
+```{r DPE estimate Exp 4, echo = TRUE, message=FALSE, warning=FALSE}
+dpe.rel <- filter(dpe, dpcount >= 500)
+summarize(dpe.rel, mean.dpe = mean(median_duration, na.rm=TRUE))
+```
+Finally, we can represent this visually by examining the survival curves created using the ggsurv function. **Note**--the values displayed on this figure are from the published version of the manuscript and might vary by ~ 1ms from those generated here.
+
+```{r survival figure Exp 4, echo = TRUE, message=FALSE, warning=FALSE}
+data$survdat<-as.integer(ifelse(data$Condition=="Target",NA,data$ffd))
+tmp2 <- filter(data, !subject %in% c( 9, 20, 22, 29, 33, 37, 39, 43))
+ffd.surv <- survfit(Surv(survdat) ~ Condition, data=tmp2)
+pl2<-ggsurv(s=ffd.surv)
+
+pl2 + geom_vline(xintercept = 159.81, linetype = "dotted") + 
+  annotate("rect", xmin=147, xmax=172, ymin=0, ymax=1, alpha = .2) + 
+  annotate("text", x = 450, y = 0.75, label = "Divergence Point = 160ms", size = 5) +
+  annotate("text", x = 450, y = 0.7, label = "95% CI: 147 - 172ms", size = 5) + 
+  theme(axis.text.x = element_text(colour="grey4", size=16), axis.text.y = element_text(colour = "grey4", size=16)) + 
+  labs(y = "Survival", x = "Time") + theme_grey(base_size=16)
 ```
